[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Graphics/Player/FemA/arm.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Player/FemA/body.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Player/FemA/leg.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Player/FemA/head.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Player/FemA/hand.png" type="Texture" id=5]
[ext_resource path="res://Objects/Player/Viz.gd" type="Script" id=6]
[ext_resource path="res://Objects/Player/Player.gd" type="Script" id=7]

[sub_resource type="CapsuleShape" id=1]
radius = 0.12
height = 0.08

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 7 )

[node name="Viz" type="Spatial" parent="."]
script = ExtResource( 6 )

[node name="Head" type="Sprite3D" parent="Viz"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345, -0.03 )
offset = Vector2( 0, 22 )
pixel_size = 0.003
texture = ExtResource( 4 )

[node name="Body" type="Sprite3D" parent="Viz"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.179884, 0 )
offset = Vector2( 0, 18 )
pixel_size = 0.003
texture = ExtResource( 2 )

[node name="Right_Leg" type="Sprite3D" parent="Viz"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.052, 0.147, 0.01 )
offset = Vector2( 5, -22 )
pixel_size = 0.003
texture = ExtResource( 3 )

[node name="Left_Leg" type="Sprite3D" parent="Viz"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.052, 0.147, 0.01 )
offset = Vector2( -5, -22 )
flip_h = true
pixel_size = 0.003
texture = ExtResource( 3 )

[node name="Right_Arm" type="Sprite3D" parent="Viz"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.091, 0.277, 0.03 )
offset = Vector2( 12, -22 )
pixel_size = 0.003
texture = ExtResource( 1 )

[node name="Hand" type="Sprite3D" parent="Viz/Right_Arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0567974, -0.14555, 0 )
offset = Vector2( -2, -6 )
pixel_size = 0.003
texture = ExtResource( 5 )

[node name="Left_Arm" type="Sprite3D" parent="Viz"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.091, 0.277, 0.03 )
offset = Vector2( -12, -22 )
flip_h = true
pixel_size = 0.003
texture = ExtResource( 1 )

[node name="Hand" type="Sprite3D" parent="Viz/Left_Arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.057, -0.146, 0 )
offset = Vector2( 2, -6 )
flip_h = true
pixel_size = 0.003
texture = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.16, 0 )
shape = SubResource( 1 )
